Styled form and troubleshot layout issues!

--- a/scss/base/_base-styles.scss
+++ b/scss/base/_base-styles.scss
@@ -9,11 +9,13 @@
 body {
   background-color: $primary-color;
   margin-top:0;
+  margin-right: 0;
 }
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-family: $heading-font;
 }
 
@@ -22,6 +24,12 @@ h3 {
   text-transform: uppercase;
   font-size: 1.8em;
   color: $secondary-color;
+}
+
+h4 {
+  letter-spacing: .07em;
+  font-size: 1.5em;
+  color: $primary-color;
 }
 
 p {
@@ -113,6 +121,58 @@ hr {
 header {
   background-color: $primary-color;
   margin-top:0;
+}
+
+form {
+  margin-bottom: 100px;
+}
+
+input[type="text"],
+input[type="Email"] {
+  height: 50px;
+  font-size: 1.3em;
+  border-radius: 5px;
+  border: none;
+  text-indent: 15px;
+  margin-top: 10px;
+  background-color: rgb(255, 255, 224);
+  @include mq('med') {
+    width: 70%;
+  }
+  &:focus {
+    background-color: #ffffff;
+    outline: 0;
+    border: 3px solid rgba($primary-color, .8);
+  }
+}
+
+button[type="button"] {
+  width: 25%;
+  height:50px;
+  margin-top: 60px;
+  border-radius: 10px;
+  background-color: $primary-color;
+  border:none;
+  color: $secondary-color;
+  font-size: 1.3em;
+  letter-spacing: .02em;
+  text-transform: uppercase;
+  transition: opacity .3s ease-out,
+              transform .2;
+  min-width: 100px;
+  &:focus {
+    outline: 0;
+  }
+  &:hover {
+    cursor: pointer;
+    opacity: .87;
+  }
+  &:active {
+    background-color: $secondary-color;
+    color: $primary-color;
+    border: 3px solid $primary-color;
+    transform: scale(.95);
+  }
 }
 
 footer {
