--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -494,7 +494,7 @@ CONTACT PAGE
       padding-top: 25px;
       padding-bottom: 25px;
       width: 40%;
-      min-width: 350px;
+      min-width: 300px;
       max-width: 550px;
       transform: translateY(50px);
       @include b-shad;
@@ -503,7 +503,7 @@ CONTACT PAGE
         padding-bottom: 10px;
         font-family: $heading-font;
         letter-spacing: .2em;
-        font-size: 1.4em;
+        font-size: 1.3em;
         a {
           color: $secondary-color;
           text-decoration: underline;
@@ -552,14 +552,40 @@ CONTACT PAGE
 .form-flex-container {
   display: flex;
   flex-direction: column;
-  height: 300px;
-  width: 40%;
+  height: 400px;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
+  @include mq('med') {
+    width:60%;
+  }
+  @include mq('lg') {
+    max-width: 620px;
+  }
   .form-element {
     display: flex;
     flex-direction: column;
     flex: 1;
+    margin-top: 25px;
+    @include mq('med') {
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
+    label {
+      text-align: left;
+      color: $primary-color;
+      font-size: 1.3em;
+      font-weight: 700;
+      @include mq('med') {
+        padding-right: 20px;
+        max-width: 120px;
+      }
+      @include mq('lg') {
+        padding-right: 20px;
+        max-width: 160px;
+      }
+    }
   }
 }
 
